--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
     "axios": "^1.8.4",
+    "country-flag-icons": "^1.6.4",
     "moment": "^2.30.1",
     "react": "^19.1.0",
+    "react-country-flag": "^3.1.0",
+    "react-country-icons": "^1.1.7",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.5.1",
